--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,7 @@
 <head>
   <link type="text/css" rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Sniglet' rel='stylesheet' type='text/css'>
-  <link type="text/css" rel="stylesheet" href="/stylesheet.css">
+  <link type="text/css" rel="stylesheet" href="http://www.nathanaelburt.me/css/stylesheet.css">
   <title>Ian Knox</title>
 </head>
 <body>
